# multiagentes

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  quality.bat  start.bat  stop.bat  test.bat
.github/: dependabot.yml
backend/: .coverage  .dockerignore  .env.example  Dockerfile  agent.py  auth.py  check_schema.py  debug_routes.py  list_routes.py  main.py  media_tools.py  openapi.json  pyproject.toml  pytest_out.txt  reels_tools.py  reqs_debug.txt  requirements.txt  storage.py  test.bat  test_db_conn.py  test_media.py  test_orq.py  test_pdf_init.py  test_search.py  test_search_perf.py  tmp_openapi.json  transcricoes.json  transcripter.py
backend/agents/: delegation.py  factory.py  orchestrator.py  specialists.py
backend/config/: cors.py  settings.py
backend/knowledge/: __init__.py  pdf_knowledge.py  tavily.py
backend/middleware/: auth_logging.py  proxy_headers.py
backend/prompts/: agente_pdf.md  criador_experts.md  criador_midia.md  juridico.md  orquestrador.md  pesquisador.md
backend/routers/: config.py  health.py  media_router.py  uploads.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_uploads.py  test_vcr_agent.py
backend/tests/integration/cassettes/: test_agent_basic_response.yaml
backend/tests/unit/: test_agent_wrappers.py  test_cors.py  test_get_model.py  test_media_tools.py  test_reels_tools.py  test_transcripter.py
backend/tmp/: test_search.py  veo_jobs.json
backend/tmp/chromadb/: chroma.sqlite3
docs/: ARCHITECTURE.md  (+3 more)
frontend-streamlit/: .coverage  Dockerfile  app.py  config.py  pyproject.toml
frontend-streamlit/components/: agent_monitor.py  chat.py  media_display.py  metrics.py  sidebar.py  tool_display.py
frontend-streamlit/services/: api_client.py
frontend-streamlit/styles/: theme.css
frontend-streamlit/tests/: conftest.py  test_agent_monitor.py  test_api_client.py  test_chat.py  test_media_display.py  test_metrics.py  test_sidebar.py  test_tool_display.py
(+59 files in other folders)
